# vvcam-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  pyproject.toml  run_isp_media.sh  run_isp_media_local.sh  setup.py  video1.py
dectet/: detect_sensor.py  get_frame.c  main.c
detect/: get_frame.h  main.c
get_raw/: .gitignore  Makefile  convert_bin_to_jpg.py  get_frame.c  main.c  readme.md
include/: vvcam_sensor.h
k230_sensor/: _SensorSetting.py  __init__.py  sensor.py  video1.py
k230_sensor/v4l-cam/: v4l-cam.c  v4l-cam.h
src/: bf3238.c  by3238.c  gc2053.c  gc2093.c  imx335.c  isp_media_server_debian  lib.c  ov5647.c
test/: auto_mirror.py
