[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k230_sensor"
version = "0.1.0"
description = "K230 Camera Sensor Library for sensor detection and configuration"
authors = [
    {name = "sc-bin", email = "3335447573@qq.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/walnutpi/vvcam-lib"

[tool.setuptools.packages.find]
where = ["."]
include = ["k230_sensor*"]